# MAS-Aviary

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
config/: agents.yaml  agents_mcp.yaml  aviary_graph.yaml  aviary_networked.yaml  aviary_networked_agents.yaml  aviary_orchestrated_agents.yaml  aviary_run.yaml  aviary_sequential.yaml  aviary_staged_pipeline.yaml  coordination.yaml  coordination_mcp.yaml  default.yaml  default_mcp.yaml  default_mcp_sequential.yaml  eval_thresholds.yaml  graph_routed.yaml  iterative_feedback.yaml  networked.yaml  networked_agents.yaml  orchestrated.yaml  orchestrated_agents.yaml  sequential.yaml  sequential_agents.yaml  staged_pipeline.yaml  valid_param_sets.json
docs/: architecture.rst  conf.py  configuration.rst  index.rst  quickstart.rst
scripts/: generate_valid_params.py  plot_agent_sequences.py  plot_agent_timelines.py  plot_final.py  plot_paper_figures.py  plot_role_activity.py  plot_tool_activity.py  start_vllm.sh  stat_batch_runner.py
tests/: conftest.py  test_agent_factory.py  test_blackboard.py  test_completion_criteria.py  test_condition_evaluator.py  test_config_loader.py  test_coordinator.py  test_cross_strategy_metrics.py  test_entry_point.py  test_eval_classifier.py  test_execution_handler.py  test_feedback_extraction.py  test_graph_definition.py  test_graph_routed_handler.py  test_graph_routed_integration.py  test_graph_routed_metrics.py  test_history.py  test_hybrid_prehook_integration.py  test_instrumentation.py  test_integration.py  test_iterative_feedback_handler.py  test_iterative_feedback_integration.py  (+29 more)
(+61 files in other folders)
